[Upgrades] enableHeight34 is depricated [Docs]  added dependency for regenerator-runtime@0.9.6 [Toggle] fixed vertical align with inline elements

--- a/components/Toggle/Toggle.less
+++ b/components/Toggle/Toggle.less
@@ -28,6 +28,11 @@
     &.isDisabled {
       cursor: default;
     }
+
+    &:after {
+      content: ' ';
+      display: inline-block;
+    }
   }
 
   .handle {
